--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   
     "type": "module",
+    "scripts": {
+    "start": "node app03.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
