--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.6.2",
-    "mysql3": "^0.6.0"
+    "mysql3": "^0.6.0",
+    "socket.io": "^4.5.4"
   }
 }
